--- a/pom.xml
+++ b/pom.xml
@@ -14,24 +14,7 @@
     <artifactId>products</artifactId>
     <version>1.0.0</version>
     <name>products</name>
-    <description>Microservice for products management</description>
-    <url/>
-    
-    <licenses>
-        <license/>
-    </licenses>
-    
-    <developers>
-        <developer/>
-    </developers>
-    
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
-    
+    <description>Microservice for products management</description> 
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -89,5 +72,11 @@
             </plugin>
         </plugins>
     </build>
-
+    <developers>
+        <developer>
+            <id>linkedin.com/in/davecalix</id>
+            <name>Hector David Guzman Calix</name>
+            <email>davecalix@gmail.com</email>
+        </developer>
+    </developers>
 </project>
